db/core-db/deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: core-db
  namespace: db
spec:
  serviceName: core-db-service
  selector:
    matchLabels:
      app: core-db
  template:
    metadata:
      labels:
        app: core-db
    spec:
      containers:
        - name: core-db
          resources:
            limits:
              memory: '1Gi'
              cpu: '500m'
          image: neo4j:5.2.0
          volumeMounts:
            - mountPath: /data
              name: core-db-pvc-data
          ports:
            - name: http
              containerPort: 7474
            - name: bolt
              containerPort: 7687
      volumeClaimTemplates:
        - metadata:
            name: core-db-pvc-data
          spec:
            accessModes:
              - ReadWriteOnce
            resources:
              requests:
                storage: 3Gi
